--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,9 +1,39 @@
 @font-face {
-  font-family: 'AnekMalayalam-Light';
-  font-weight: 200;
+  font-family: 'Montserrat-Bold';
+  font-weight: 700;
   font-style: normal;
-  src: local('AnekMalayalam-Light'),
-    url('../fonts/AnekMalayalam-Light.woff2') format('woff2'),
-    url('../fonts/AnekMalayalam-Light.woff') format('woff');
+  src: local('Montserrat-Bold'),
+    url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+    url('../fonts/Montserrat-Bold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Raleway-Bold';
+  font-weight: 700;
+  font-style: normal;
+  src: local('Raleway-Bold'),
+    url('../fonts/Raleway-Bold.woff2') format('woff2'),
+    url('../fonts/Raleway-Bold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'OpenSans-Light';
+  font-weight: 300;
+  font-style: normal;
+  src: local('OpenSans-Light'),
+    url('../fonts/OpenSans-Light.woff2') format('woff2'),
+    url('../fonts/OpenSans-Light.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Merriweather-LightItalic';
+  font-weight: 300;
+  font-style: normal;
+  src: local('Merriweather-LightItalic'),
+    url('../fonts/Merriweather-LightItalic.woff2') format('woff2'),
+    url('../fonts/Merriweather-LightItalic.woff') format('woff');
   font-display: swap;
 }
