--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -91,6 +91,138 @@ a {
     border-bottom: 1px solid #FCBB08;
 }
 
+.about {
+    padding: 150px 0;
+    background-color: #F6F8FA;
+}
+
+.about__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about__text p {
+    margin-bottom: 16px;
+    max-width: 770px;
+}
+
+.expertise {
+    padding: 140px 0;
+}
+
+.expertise__title {
+    margin-bottom: 90px;
+}
+
+.expertise__inner {
+    margin-bottom: 110px;
+    display: flex;
+}
+
+.expertise__info {
+    margin-right: 30px;
+    margin-top: 10px;
+    width: 370px;
+    flex: none;
+}
+
+.expertise__info-item {
+    position: relative;
+    padding: 2px 0 28px;
+    font-size: 11px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #1D1D1D;
+    border-top: 2px solid #1D1D1D;
+}
+
+.expertise__info-item span {
+    position: absolute;
+    display: block;
+    margin-right: 7px;
+    right: 0;
+    top: 0;
+}
+
+.expertise__info-item span::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: #f0f0f0;
+    right: -7px;
+    top: -2px;
+    width: 100%;
+}
+
+.expertise__text p {
+    margin-bottom: 25px;
+}
+
+.expertise__items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.expertise__item {
+    position: relative;
+    padding-left: 85px;
+    width: 370px;
+}
+
+.expertise__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+}
+
+.expertise__item--design::before {
+    background-image: url("../images/icons/design-logo.svg");
+}
+
+.expertise__item--dev::before {
+    background-image: url("../images/icons/development-logo.svg");
+}
+
+.expertise__item--marketing::before {
+    background-image: url("../images/icons/marketing-logo.svg");
+}
+
+.expertise__item-title {
+    margin-bottom: 14px;
+    letter-spacing: 4px;
+    color: #333333;
+    text-transform: uppercase;
+}
+
+.expertise__item-text {
+    color: #777777;
+}
+
+.magic {
+    background-color: #ffffff;
+    background-image: url("../images/magic-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: left 70%;
+}
+
+.magic__inner {
+    padding: 100px 0 190px;
+    margin-left: auto;
+    max-width: 470px;
+}
+
+.magic__title {
+    margin-bottom: 68px;
+}
+
+.magic__text p {
+    margin-bottom: 25px;
+}
+
 @font-face {
     font-family: "Montserrat-Bold";
   font-weight: 700;
