--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -392,6 +392,79 @@ $accent: #FCBB08;
 }
 
 
+.team {
+  padding: 120px 0;
+  &__title {
+    margin-bottom: 100px;
+  }
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+  }
+  &__name {
+    padding: 35px 0 12px;
+    @extend %m-bold;
+    font-size: 14px;
+    color: $default-light;
+  }
+}
+
+
+.pricing {
+  padding: 145px 0 160px;
+  background-color: #F6F8FA;
+  &__title {
+    margin-bottom: 90px;
+  }
+  &__items {
+    display: flex;
+    justify-content: space-between;
+  }
+  ul.pricing__item {
+    padding: 24px 25px 50px;
+    background-color: #ffffff;
+    text-align: center;
+    width: 370px;
+  }
+  &__item {
+    li {
+      margin-bottom: 30px;
+      font-size: 16px;
+      color: #212121;
+    }
+    & .pricing__item-name {
+      margin-bottom: 8px;
+      text-align: left;
+    }
+    & .pricing__item-num {
+      margin-bottom: 50px;
+      font-size: 80px;
+    }
+  }
+  &__item-num sup {
+    font-size: 40px;
+    line-height: 54px;
+  }
+  &__item-link {
+    display: block;
+    margin-top: 70px;
+    font-size: 14px;
+    letter-spacing: 1.5px;
+    color: #212121;
+  }
+}
+
+
+.clients {
+  padding: 70px 0 95px;
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 
 // .footer {
 
