--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -466,6 +466,98 @@ $accent: #FCBB08;
 }
 
 
-// .footer {
+.connection {
+  padding: 145px 0 160px;
+  background-image: url('../images/map.jpg');
+  background-repeat: no-repeat;
+  background-size: 40%;
+  background-position: right 65%;
+  &__title {
+    margin-bottom: 80px;
+  }
+}
 
-// }
+
+.form {
+  max-width: 570px;
+  input,
+  textarea {
+    margin-bottom: 15px;
+    padding: 15px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #373A39;
+  }
+  textarea {
+    min-height: 140px;
+    resize: none;
+  }
+  input::placeholder,
+  textarea::placeholder {
+    font-size: 12px;
+    letter-spacing: 4px;
+    color: $default-light;
+    text-transform: uppercase;
+  }
+  button {
+    margin-top: 40px;
+    padding: 15px 70px;
+    font-size: 11px;
+    letter-spacing: 2px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    border: none;
+    background-color: #212121;
+    cursor: pointer;
+  }
+}
+
+
+.footer {
+  &__top {
+    padding: 110px 0 60px;
+    background-color: #333333;
+    text-align: center;
+  }
+  &__logo {
+    margin-bottom: 70px;
+    padding: 0 35px 4px;
+    display: inline-block;
+    border-bottom: 2px solid #FCBB08;
+    overflow: hidden;
+  }
+  ul.footer__social {
+    margin-bottom: 65px;
+    display: flex;
+    justify-content: center;
+  }
+  &__social-list {
+    padding: 0 15px;
+  }
+  &__social-link {
+    letter-spacing: 4px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+  }
+  &__contact {
+    margin-bottom: 60px;
+    font-size: 14px;
+    color: #FFFFFF;
+    a {
+      margin-bottom: 10px 0;
+      display: block;
+      color: #FFFFFF;
+    }
+  }
+  &__copy {
+    padding: 40px 10px;
+    text-align: center;
+    color: #CCCCCC;
+    background-color: #2A2C2B;
+  }
+}
+
+.go-top {
+  display: inline-block;
+}
