--- a/src/tpl/partials/footer.html
+++ b/src/tpl/partials/footer.html
@@ -1,6 +1,43 @@
 <footer class="footer">
-  <div class="container">
-
+  <div class="footer__top">
+    <a class="footer__logo" href="#">
+      <img src="images/logo-white.svg" alt="Логотип" >
+    </a>
+    <ul class="footer__social">
+      <li class="footer__social-list">
+        <a class="footer__social-link" href="#">FACEBOOK</a>
+      </li>
+      <li class="footer__social-list">
+        <a class="footer__social-link" href="#">TWITTER</a>
+      </li>
+      <li class="footer__social-list">
+        <a class="footer__social-link" href="#">GOOGLE+</a>
+      </li>
+      <li class="footer__social-list">
+        <a class="footer__social-link" href="#">BEHANCE</a>
+      </li>
+      <li class="footer__social-list">
+        <a class="footer__social-link" href="#">DRIBBLE</a>
+      </li>
+      <li class="footer__social-list">
+        <a class="footer__social-link" href="#">INSTAGRAM</a>
+      </li>
+    </ul>
+    <div class="footer__contact">
+      <adress class="adress">
+        Spain, Plaza de las Descalas 27
+      </adress>
+      <a class="phone" href="tel:+795965252222">(7959) 65 252 222</a>
+      <a class="email" href="mailto:info@mail.com">info@mail.com</a>
+    </div>
+    <a class="go-top" href="#">
+      <img src="images/icons/to-top.svg" alt="arrow top">
+    </a>
+  </div>
+  <div class="footer__copy">
+    <p>
+      @2020 O...Marketing
+    </p>
   </div>
 </footer>
 
