added animation and scroll

--- a/src/tpl/partials/footer.html
+++ b/src/tpl/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <div class="footer__top">
     <a class="footer__logo" href="#">
-      <img src="images/logo-white.svg" alt="Логотип" >
+      <img src="images/logo-white.svg" alt="Логотип" data-aos="fade-up">
     </a>
-    <ul class="footer__social">
+    <ul class="footer__social" data-aos="fade-up">
       <li class="footer__social-list">
         <a class="footer__social-link" href="#">FACEBOOK</a>
       </li>
@@ -23,14 +23,14 @@
         <a class="footer__social-link" href="#">INSTAGRAM</a>
       </li>
     </ul>
-    <div class="footer__contact">
+    <div class="footer__contact" data-aos="fade-up">
       <adress class="adress">
         Spain, Plaza de las Descalas 27
       </adress>
       <a class="phone" href="tel:+795965252222">(7959) 65 252 222</a>
       <a class="email" href="mailto:info@mail.com">info@mail.com</a>
     </div>
-    <a class="go-top" href="#">
+    <a class="go-top" href="#" data-aos="fade" data-aos-delay="400">
       <img src="images/icons/to-top.svg" alt="arrow top">
     </a>
   </div>
