--- a/src/tpl/partials/header.html
+++ b/src/tpl/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="header__top">
+  <div class="header__top" data-aos="fade-down">
     <div class="container">
       <div class="header__top-inner">
         <a class="logo" href="index.html">
@@ -42,7 +42,7 @@
               </a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#blog">
+              <a class="menu__list-link" href="#">
                 BLOG
               </a>
             </li>
@@ -54,13 +54,13 @@
   <div class="header__content">
     <div class="container">
       <div class="header__content-inner">
-        <h1 class="header__title">
+        <h1 class="header__title" data-aos="fade-up">
           O...MARKETING
         </h1>
-        <h4 class="header__subtitle">
+        <h4 class="header__subtitle" data-aos="fade-up">
           DIGITAL MARKETING AGENCY
         </h4>
-        <a class="header__icon" href="#">
+        <a class="header__icon" href="#" data-aos="fade-up">
           <img src="images/icons/mouse.svg" alt="mouse icon">
         </a>
       </div>
