--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2537,30 +2537,44 @@ a {
 
 .expertise__info-item {
     position: relative;
-    padding: 2px 0 28px;
+    margin: 0 0 40px;
+    width: 370px;
+    height: 2px;
+    background-color: #aaa;
     font-size: 11px;
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #1D1D1D;
-    border-top: 2px solid #1D1D1D;
 }
 
 .expertise__info-item span {
-    position: absolute;
+    height: 100%;
     display: block;
-    margin-right: 7px;
-    right: 0;
-    top: 0;
+    width: 0;
+    color: rgb(255, 251, 251);
+    line-height: 30px;
+    position: absolute;
+    text-align: end;
+    background-color: black;
+    font-size: 14px;
 }
 
-.expertise__info-item span::before {
-    content: "";
+.expertise__info-text {
+    padding-top: 3px;
+    opacity: 0;
+    margin-left: 17px;
+    display: block;
+    width: 30px;
+    height: 20px;
     position: absolute;
-    height: 2px;
-    background-color: #f0f0f0;
-    right: -7px;
-    top: -2px;
-    width: 100%;
+    color: black;
+    text-align: end;
+    top: 0;
+    z-index: 100;
+}
+
+.expertise__info-name {
+    padding-top: 3px;
 }
 
 .expertise__text p {
