--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -126,33 +126,53 @@ $accent: #FCBB08;
     width: 370px;
     flex: none;
   }
+
   &__info-item {
     position: relative;
-    padding: 2px 0 28px;
+    margin: 0 0 40px;
+    width: 370px;
+    height: 2px;
+    background-color: #aaa;
     font-size: 11px;
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #1D1D1D;
-    border-top: 2px solid #1D1D1D;
-  }
-  &__info-item {
-    span {
-      position: absolute;
+
+
+    span{
+      height: 100%;
       display: block;
-      margin-right: 7px;
-      right: 0;
-      top: 0;
-    }
-    span::before {
-      content: "";
+      width: 0;
+      color: rgb(255, 251, 251);
+      line-height: 30px;
       position: absolute;
-      height: 2px;
-      background-color: #f0f0f0;
-      right: -7px;
-      top: -2px;
-      width: 100%;
+      text-align: end;
+      // padding-right: 5px;
+      background-color: black;
+      font-size: 14px;
     }
   }
+  &__info-text{
+    // padding-left: 70px;
+    padding-top: 3px;
+    opacity: 0;
+    margin-left: 17px;
+    display: block;
+    width: 30px;
+    height: 20px;
+    position: absolute;
+    color: black; 
+    text-align: end;
+    top: 0;
+    z-index: 100;
+  }
+
+  &__info-name{
+    padding-top: 3px;
+  }
+
+
+
   &__text p {
     margin-bottom: 25px;
   }
@@ -192,6 +212,46 @@ $accent: #FCBB08;
     color: #777777;
   }
 }
+
+
+
+
+
+
+// .animated-progress {
+//   width: 300px;
+//   height: 2px;
+//   margin: 20px 10px;
+//   // overflow: hidden;
+//   position: relative;
+//   background-color: #ccc;
+// }
+
+// .animated-progress span {
+//   height: 100%;
+//   display: block;
+//   width: 0;
+//   color: rgb(255, 251, 251);
+//   line-height: 30px;
+//   position: absolute;
+//   text-align: end;
+//   // padding-right: 5px;
+//   background-color: black;
+// }
+
+// .animated-progress__text{
+//   // padding-left: 70px;
+//   opacity: 0;
+//   display: block;
+//   width: 30px;
+//   height: 20px;
+//   position: absolute;
+//   color: red; 
+//   text-align: end;
+//   top: 0;
+//   z-index: 100;
+// }
+
 
 
 .magic {
