--- a/src/tpl/partials/footer.html
+++ b/src/tpl/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="footer__top">
     <a class="footer__logo" href="#">
       <img src="images/logo-white.svg" alt="Логотип" data-aos="fade-up">
@@ -39,6 +39,6 @@
       @2020 O...Marketing
     </p>
   </div>
-</footer>
+</footer> -->
 
 <script src="js/main.min.js"></script>
