--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3109,11 +3109,367 @@ button {
     background-color: #FCBB08;
 }
 
+@media (max-width: 1600px) {
+    .magic__inner {
+        padding: 50px 0;
+    }
+
+    .slick-prev {
+        left: 0;
+    }
+
+    .slick-next {
+        right: 0;
+    }
+
+    .slider__blog-item {
+        padding: 120px 60px;
+    }
+
+    ul.slick-dots {
+        margin-left: 60px;
+    }
+}
 /* Large desktops and laptops */
 /* Portrait tablets and medium desktops */
+@media (max-width: 1200px) and (max-width: 767px) {
+    .title {
+        font-size: calc(24px + 61.2 * (100vw - 320px) / 1200);
+    }
+}
+
+@media (max-width: 1200px) and (min-width: 767px) {
+    .title {
+        font-size: calc(24px + 36 * 100vw / 1200);
+    }
+}
+
+@media (max-width: 1200px) {
+    .portfolio__filter-btn {
+        margin-right: 0;
+    }
+
+    .team__items,
+  .pricing__items,
+  .clients__list {
+        -moz-column-gap: 20px;
+        column-gap: 20px;
+    }
+
+    .about,
+  .expertise,
+  .portfolio,
+  .slider,
+  .team,
+  .pricing,
+  .connection {
+        padding: 75px 0;
+    }
+
+    .about__title,
+  .team__title,
+  .pricing__title,
+  .connection__title {
+        margin-bottom: 50px;
+    }
+
+    .about__inner {
+        display: block;
+    }
+
+    .about__text p {
+        max-width: 100%;
+    }
+
+    .expertise__title {
+        margin-bottom: 50px;
+    }
+}
 /* Portrait tablets and small desktops */
+@media (max-width: 991px) {
+    .expertise__inner {
+        padding-bottom: 0;
+        display: block;
+        margin-bottom: 30px;
+    }
+
+    .expertise__info {
+        margin-right: 30px;
+        width: 100%;
+    }
+
+    .expertise .expertise__items {
+        display: block;
+    }
+
+    .expertise__item {
+        margin-bottom: 40px;
+        width: 100%;
+    }
+
+    .magic {
+        background-image: none;
+    }
+
+    .magic__inner {
+        margin-left: 0;
+        max-width: 100%;
+    }
+
+    .magic__title {
+        margin-bottom: 50px;
+    }
+
+    .portfolio__content {
+        margin-bottom: 40px;
+        -moz-column-count: 3;
+        column-count: 3;
+    }
+
+    .portfolio__top {
+        margin-bottom: 50px;
+        display: block;
+    }
+
+    .portfolio__filter-btn {
+        margin-top: 40px;
+    }
+
+    .portfolio__video {
+        margin-bottom: 30px;
+    }
+
+    .portfolio__numbers-item {
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 991px) and (max-width: 767px) {
+    .portfolio__numbers-item {
+        font-size: calc(24px + 61.2 * (100vw - 320px) / 1200);
+    }
+}
+
+@media (max-width: 991px) and (min-width: 767px) {
+    .portfolio__numbers-item {
+        font-size: calc(24px + 36 * 100vw / 1200);
+    }
+}
+
+@media (max-width: 991px) {
+    .blockquote {
+        margin: 0 auto 70px;
+    }
+
+    .connection {
+        background-image: none;
+    }
+
+    .form {
+        max-width: 100%;
+    }
+
+    .footer__top {
+        padding-top: 75px;
+    }
+
+    .footer__logo {
+        margin-bottom: 40px;
+    }
+
+    .footer ul.footer__social {
+        margin-bottom: 40px;
+        flex-wrap: wrap;
+    }
+
+    .footer__social-list {
+        margin-bottom: 25px;
+        width: 33.333%;
+    }
+}
 /* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .header__top-inner path, .header__top-inner rect {
+        transition: all 0.5s ease-out;
+    }
+
+    .header__top-inner.header__top-inner--active .menu__list {
+        transform: translateY(0%);
+    }
+
+    .header__top-inner.header__top-inner--active path {
+        fill: white;
+    }
+
+    .header__top-inner.header__top-inner--active rect {
+        fill: white;
+    }
+
+    .header__title {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 767px) and (max-width: 767px) {
+    .header__title {
+        font-size: calc(24px + 81.6 * (100vw - 320px) / 1200);
+    }
+}
+
+@media (max-width: 767px) and (min-width: 767px) {
+    .header__title {
+        font-size: calc(24px + 48 * 100vw / 1200);
+    }
+}
+
+@media (max-width: 767px) and (max-width: 767px) {
+    .header__subtitle {
+        font-size: calc(14px + 3.4 * (100vw - 320px) / 1200);
+    }
+}
+
+@media (max-width: 767px) and (min-width: 767px) {
+    .header__subtitle {
+        font-size: calc(14px + 2 * 100vw / 1200);
+    }
+}
+
+@media (max-width: 767px) {
+    .logo {
+        position: relative;
+        z-index: 2;
+    }
+
+    .menu__list {
+        position: absolute;
+        display: block;
+        left: 0;
+        right: 0;
+        top: 0;
+        text-align: center;
+        background-color: #000;
+        transform: translateY(-200%);
+        transition: all 0.5s;
+    }
+
+    .menu__list-item:not(:last-child) {
+        margin-right: 0;
+    }
+
+    .menu ul.menu__list {
+        padding: 90px 0 15px;
+    }
+
+    .menu__list-link {
+        display: block;
+        padding: 15px 0;
+        color: #fff;
+    }
+
+    .menu__btn {
+        position: relative;
+        display: block;
+        padding: 0;
+        background-color: transparent;
+        border: none;
+        z-index: 2;
+    }
+
+    .magic__inner {
+        padding-top: 0;
+    }
+
+    .portfolio__content {
+        margin-bottom: 40px;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+
+    .portfolio__btn {
+        display: block;
+        margin-bottom: 30px;
+    }
+
+    .portfolio__btn + .portfolio__btn {
+        margin-left: 0;
+    }
+
+    .portfolio__add {
+        margin-bottom: 40px;
+    }
+
+    .portfolio__numbers {
+        flex-wrap: wrap;
+    }
+
+    .portfolio__numbers-item {
+        width: 50%;
+    }
+
+    .blockquote {
+        margin-bottom: 40px;
+        padding: 0 10px;
+    }
+
+    .slider__blog-item {
+        padding: 40px 0;
+    }
+
+    .slider__blog-item-title {
+        font-size: 24px;
+    }
+
+    ul.slick-dots {
+        margin-left: 0;
+    }
+
+    .team__items {
+        display: block;
+    }
+
+    .team__item {
+        margin-bottom: 25px;
+    }
+
+    .team__item img {
+        margin: 0 auto;
+    }
+
+    .pricing__items {
+        display: block;
+    }
+
+    .pricing ul.pricing__item {
+        margin: 0 auto 25px;
+        max-width: 500px;
+        width: 100%;
+    }
+
+    .clients__list {
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .clients__list li {
+        margin-bottom: 25px;
+    }
+}
 /* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .expertise__item {
+        padding-left: 0;
+        padding-top: 60px;
+    }
+
+    .portfolio__numbers-item {
+        width: 100%;
+    }
+
+    .footer__social-list {
+        width: 50%;
+    }
+}
+
 html {
     box-sizing: border-box;
 }
